--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Yash Trivedi: Student + Developer</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>I'm sorry but my portfolio doesn't work properly without JavaScript enabled. Please enable it to continue. If you cannot contact me directly at 416-400-9651 or at t.yash2003@gmail.com</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
