--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Yash Trivedi: Making Better Projects By Working Harder">
+    <meta name="author" content="Yash Trivedi">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Yash Trivedi: Student + Developer</title>
   </head>
