--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Yash Trivedi: Making Better Projects By Working Harder">
-    <meta name="author" content="Yash Trivedi">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Yash Trivedi: Making Better Projects By Working Harder"
+    />
+    <meta name="author" content="Yash Trivedi" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Yash Trivedi: Student + Developer</title>
   </head>
   <body>
     <noscript>
-      <strong>I'm sorry but my portfolio doesn't work properly without JavaScript enabled. Please enable it to continue. If you cannot contact me directly at 416-400-9651 or at t.yash2003@gmail.com</strong>
+      <strong
+        >I'm sorry but my portfolio doesn't work properly without JavaScript
+        enabled. Please enable it to continue. If you cannot contact me directly
+        at 416-400-9651 or at t.yash2003@gmail.com</strong
+      >
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
